IN DEVELOPMENT ======= 1.2.0-9

- updated: SQLite schemaCreate, schemaDrop, renamed to: createSchema, deleteSchema
- updated: markdown delegates

- fixed: install module

======= 1.2.0-8

- added: sqlite ORM supports blob type
- added: framework.on('exit')
- added: markdown.load(text, name), @name parameter (such as helper to parser)

- updated: rename returnFile, returnContent, returnStatic, return404, return500: responseFile, responseContent, etc..
- updated: auto added first property name as primary key in builders schema (note: if not defined primary key)
- updated: clean code
- updated: SQLite ORM: delete callback return params: @err {Error} and @isDeleted {Boolean}
- updated: Markdown link parser
- updated: rename view helpers (isReadonly, isDisabled, isChecked, isSelected: renamed to readonly, disabled, checked, selected)
- updated: improvement Markdown parser

- fixed: error message / view not found, content not found, template not found
- fixed: error message in SQLite ORM
- fixed: problem with insert, update in SQLite ORM (fix without properties)
- fixed: framework.clear()
- fixed: problem with upload and readSync & read (framework waits until the stream is closed)
- fixed: install controller & module - framework load only *.js files

======= 1.2.0-7

- added: framework.utils array.prototype.take(count), array.prototype.skip(count)
- added: sqlite.schemaCreate(schema), sqlite.schemaDrop(schema)
- added: controller.cancel()
- added: controller.install

- updated: controller.init is now obsolete
- updated: framework.createResource(name, {String or Object});

- fixed: framework.decode()
- fixed: problem with routing priority

======= 1.2.0-6

- updated: rename framework.statics to framework.static;
- clean code

======= 1.2.0-5

- fixed: problem with template compiler

======= 1.2.0-4

- updated: view compiler (improvement)
- updated: template compiler (improvement)

- fixed: problem with framework.clear();

======= 1.2.0-3
