@@ -93,13 +93,36 @@ exports.request = function(url, method, data, callback, headers, encoding, timeo
 /*
 	Extend object
 	@source {Object}
-	@obj {Object}
+	@add {Object}
+	@rewrite {Boolean} :: option, default false
 	return @source
 */
-exports.extend = function(source, obj) {
-	if (source === null || obj === null)
+exports.extend = function(source, add, rewrite) {
+	
+	if (source === null || add === null)
 		return source;
-	util._extend(source, obj);
+
+	if (typeof(source) !== 'object' || typeof(add) !== 'object')
+		return source;
+
+	var keys = Object.keys(add);
+	var i = keys.length;
+
+	while (i--) {
+
+		var key = keys[i];
+
+		if (rewrite) {
+			source[key] = add[key];
+			continue;
+		}
+
+		if (typeof(source[key]) !== 'undefined')
+			continue;
+
+		source[key] = add[key];
+	}
+	
 	return source;
 };
 
